fix: overflow property changed to overflow-x in body styles

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,7 +10,7 @@ html {
 
 body {
   background: #F8F8F7;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 main {
